Change 789 Version ver-4_1_1_16 Small typization of ListHelper
git-svn-id: file:///root/var/svn/aranea/branches/latest@4823 baba0d3d-6527-0410-ba98-ffd8059025de